--- a/app/css/directives/circularHeatForm.less
+++ b/app/css/directives/circularHeatForm.less
@@ -26,10 +26,11 @@
     }
 }
 
-.visualization-widget-mobile {
-    .circularheatform {
-        .circularheatchart {
+.gridster-mobile {
+    .visualization-widget {
+        .circularheatform {
             height: @mobile-widget-height;
         }
     }
 }
+
