--- a/app/css/directives/countBy.less
+++ b/app/css/directives/countBy.less
@@ -121,9 +121,12 @@
     }
 }
 
-.visualization-widget-mobile {
-    .countByDirective {
-        height: @mobile-widget-height;
-        width: @mobile-widget-width;
+.gridster-mobile {
+    .visualization-widget {
+        .countByDirective {
+            height: @mobile-widget-height;
+            width: @widget-width;
+        }
     }
 }
+
