--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -60,3 +60,11 @@
         }
     }
 }
+
+.gridster-mobile {
+    .visualization-widget {
+        .directedGraphDirective {
+            height: @mobile-widget-height;
+        }
+    }
+}
