--- a/app/css/directives/gantt-chart.less
+++ b/app/css/directives/gantt-chart.less
@@ -9,3 +9,12 @@
         }
     }
 }
+
+.gridster-mobile {
+    .visualization-widget {
+        .gantt-chart-directive {
+            height: @mobile-widget-height;
+            width: @mobile-widget-width;
+        }
+    }
+}
