--- a/app/css/directives/linechart.less
+++ b/app/css/directives/linechart.less
@@ -136,10 +136,12 @@
     }
 }
 
-.visualization-widget-mobile {
-    .linechartDirective {
-        min-height: @mobile-widget-height;
-        height: @mobile-widget-height;
-        width: @mobile-widget-width;
+.gridster-mobile {
+    .visualization-widget {
+        .linechartDirective {
+            min-height: @mobile-widget-height;
+            height: @mobile-widget-height;
+            width: @mobile-widget-width;
+        }
     }
 }
