--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -84,3 +84,11 @@
         }
     }
 }
+
+.gridster-mobile {
+    .visualization-widget {
+        .newsfeed-directive {
+            height: @mobile-widget-height;
+        }
+    }
+}
