--- a/app/css/directives/queryResultsTable.less
+++ b/app/css/directives/queryResultsTable.less
@@ -159,3 +159,11 @@
         padding: 10px;
     }
 }
+
+.gridster-mobile {
+    .visualization-widget {
+        .query-results-directive {
+            height: @mobile-widget-height;
+        }
+    }
+}
