--- a/app/css/directives/stackedBarChart.less
+++ b/app/css/directives/stackedBarChart.less
@@ -24,3 +24,13 @@ rect{
         }
     }
 }
+
+.gridster-mobile {
+    .visualization-widget {
+        .stackedBarchartDirective {
+            min-height: @mobile-widget-height;
+            max-height: @mobile-widget-height;
+            width: @mobile-widget-width;
+        }
+    }
+}
