--- a/app/css/directives/sunburst.less
+++ b/app/css/directives/sunburst.less
@@ -126,10 +126,12 @@
     }
 }
 
-.visualization-widget-mobile {
-    .sunburst-directive {
-        min-height: @mobile-widget-height;
-        height: @mobile-widget-height;
-        width: @mobile-widget-width;
+.gridster-mobile {
+    .visualization-widget {
+        .sunburst-directive {
+            min-height: @mobile-widget-height;
+            max-height: @mobile-widget-height;
+            width: @mobile-widget-width;
+        }
     }
 }
