--- a/app/css/directives/tagCloud.less
+++ b/app/css/directives/tagCloud.less
@@ -47,3 +47,13 @@
         }
     }
 }
+
+.gridster-mobile {
+    .visualization-widget {
+        .tagcloud {
+            min-height: @mobile-widget-height;
+            max-height: @mobile-widget-height;
+            width: @mobile-widget-width;
+        }
+    }
+}
