--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -147,10 +147,13 @@
     }
 }
 
-.visualization-widget-mobile {
-    .timeline-selector {
-        display:block;
-        margin: 0px;
-        padding: 20px;
+.gridster-mobile {
+    .visualization-widget {
+        .timeline-selector {
+            display:block;
+            margin: 0px;
+            padding: 20px;
+            height: @mobile-widget-height;
+        }
     }
 }
