--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -284,10 +284,11 @@
     }
 }
 
-.visualization-widget-mobile {
+.gridster-mobile  {
     .map-container {
         .olMap {
             height: @mobile-widget-height !important;
         }
     }
 }
+
