--- a/app/css/directives/visualizationWidget.less
+++ b/app/css/directives/visualizationWidget.less
@@ -15,6 +15,8 @@
 
 .visualization-widget {
     display: block;
+    min-width:100px;
+    min-height:100px;
     height: 100%;
     width: 100%;
     margin: 0px;
@@ -92,12 +94,18 @@
     }
 }
 
-.visualization-widget-mobile {
-    min-height:200px;
-    margin: 0px;
-    padding: 0px;
+.gridster-mobile {
+    .visualization-widget {
+        min-height: @mobile-widget-height;
+        height: @mobile-widget-height;
+        min-width: 100px;
+        width: @mobile-widget-width;
+        margin: 0px;
+        padding: 0px;
 
-    .visualization-drag-handle {
-        display:none;
+        .visualization-drag-handle {
+            display:none;
+        }
     }
 }
+
