NEON-1867 Re-implement so all filters are handled through the filter service. NEON-1868 Modify to allow all visualizations to return to original state.

--- a/app/partials/directives/gantt-chart.html
+++ b/app/partials/directives/gantt-chart.html
@@ -74,7 +74,7 @@
 </div>
 
 <div class="header-container filter-container">
-    <div class="header-item filter-reset pull-right" ng-show="(filterSet.key && filterSet.value)" title="Filtered on Item">
+    <div class="header-item filter-reset pull-right" ng-show="filterSet" title="Filtered on Item">
         <span class="filter-label">Filter</span>
         <span class="glyphicon glyphicon-remove" ng-click="removeFilter()"></span>
     </div>
