Minor UX changes in preparation for 1.15 release.

--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -53,13 +53,13 @@
             top: 2px;
         }
 
-        .head {
+        .primary-title {
             font-size: 15px;
             font-weight: bold;
             color: @main-text-color;
         }
 
-        .name {
+        .secondary-title {
             color: @main-text-color;
             font-size: 15px;
         }
@@ -68,7 +68,7 @@
             color: @main-text-color;
         }
 
-        .text {
+        .content {
             word-wrap: break-word;
         }
 
