--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -100,7 +100,7 @@
         </div>
 
         <div class="form-group">
-            <label>Data Record Limit</label>
+            <label>Data Limit</label>
             <div class="input-group">
                 <input type="number" min="1" class="form-control" ng-model="options.dataLimit" required>
                 <div class="input-group-btn">
