--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -30,7 +30,7 @@
                             </label>
                             <label class="btn btn-danger" title="Cancel">
                                 <input type="button" style="display:none" ng-click="resetNewChart()">
-                                <span class="glyphicon glyphicon-trash"></span>
+                                <span class="glyphicon glyphicon-remove"></span>
                             </label>
                         </div>
 
@@ -71,7 +71,7 @@
                         </div>
 
                         <div class="form-group chart-options-col" ng-show="options.newChart.aggregation !== 'count'" ng-class="{true: '', false: 'has-error'}[options.newChart.attrY.columnName !== '']">
-                            <label>Value Field (Y Axis)</label>
+                            <label>Agg. Field (Y Axis)</label>
                             <select class="form-control" ng-model="options.newChart.attrY" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="validateChart()">
                             </select>
                         </div>
@@ -168,7 +168,7 @@
                                 </div>
 
                                 <div class="form-group chart-options-col" ng-show="chart.aggregation !== 'count'" ng-class="{true: '', false: 'has-error'}[chart.attrYField.columnName !== '']">
-                                    <label>Value Field (Y Axis)</label>
+                                    <label>Agg. Field (Y Axis)</label>
                                     <select class="form-control" ng-model="chart.attrYField" ng-options="field.prettyName for field in chart.fields" ng-required="true" ng-change="validateChart(chart, $index)" ng-disabled="!(fields.length > 0)">
                                     </select>
                                 </div>
