--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="form-group">
-                <label>Limit</label>
+                <label>Record Limit</label>
                 <div class="input-group">
                     <input type="number" min="1" class="form-control" ng-model="active.limit" required>
                     <div class="input-group-btn">
