--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -44,15 +44,15 @@
         </div>
 
         <div class="form-group">
-            <label>Show Records with</label>
+            <label>Show Records With</label>
             <div class="btn-group">
                 <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.andTags]" ng-disabled="(filterTags.length <= 1)">
                     <input type="radio" ng-model="options.andTags" style="display:none" ng-value="true">
-                    All filters
+                    All Filters
                 </label>
                 <label class="btn btn-default" ng-class="{true: '', false: 'active'}[options.andTags]" ng-disabled="(filterTags.length <= 1)">
                     <input type="radio" ng-model="options.andTags" style="display:none" ng-value="false">
-                    Any filters
+                    Any Filters
                 </label>
             </div>
             <div class="clearfix"></div>
