--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="form-group">
-            <label>Show Focus</label>
+            <label>Show Focus Timeline</label>
             <div class="btn-group">
                 <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.showFocus === 'on_filter']">
                     <input type="radio" style="display:none" ng-model="options.showFocus" value="on_filter"> On Filter
