Added scatterplot icon

--- a/app/css/directives/addVisualization.less
+++ b/app/css/directives/addVisualization.less
@@ -113,6 +113,10 @@
         &.view-data {
             background-image: @viewDataIcon;
         }
+
+        &.scatter-plot {
+            background-image: @scatterPlotIcon;
+        }
     }
 }
 
