--- a/app/css/variables-dark-purple.less
+++ b/app/css/variables-dark-purple.less
@@ -96,4 +96,5 @@
 @tagCloudIcon: url('../img/visualizations/TagCloud64.png');
 @timelineIcon: url('../img/visualizations/Timeline64.png');
 @viewDataIcon: url('../img/visualizations/ViewData64.png');
+@scatterPlotIcon: url('../img/visualizations/ScatterPlot64.png');
 @neonIcon: @powered-by-neon-image;
