--- a/app/partials/directives/plotlyGraph.html
+++ b/app/partials/directives/plotlyGraph.html
@@ -6,25 +6,39 @@
             <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
             </select>
         </div>
+
         <div class="form-group">
             <label>Table</label>
             <select class="form-control" ng-model="active.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()">
             </select>
         </div>
+
         <div class="form-group">
-            <label>X Attr</label>
+            <label>X Attribute</label>
             <select class="form-control" ng-model="active.attrX" ng-options="field.prettyName for field in fields track by field.columnName" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="queryForData()">
             </select>
         </div>
+
         <div class="form-group">
-            <label>Y Attr</label>
+            <label>Y Attribute</label>
             <select class="form-control" ng-model="active.attrY" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="queryForData()">
             </select>
         </div>
+
+        <div class="form-group">
+            <label>Type</label>
+            <select class="form-control" ng-model="active.type" ng-required="true" ng-change="drawGraph()">
+                <option value="scatter">Scatter</option>
+                <option value="scattergl">Scatter GL</option>
+                <option value="heatmapScatter">Heatmap Scatter</option>
+                <option value="histogramScatter">Histogram Scatter</option>
+            </select>
+        </div>
+
         <div class="form-group limit-count-field">
             <label>Point Limit</label>
             <div class="input-group">
-                <input type="number" min="1" class="form-control" ng-model="active.limitCount" required>
+                <input type="number" min="1" class="form-control" ng-model="active.limitCount">
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="queryForData()">
                         <span class="glyphicon glyphicon-refresh"></span>
