--- a/app/css/directives/plotlyGraph.less
+++ b/app/css/directives/plotlyGraph.less
@@ -19,6 +19,15 @@
     }
 
     .graph-div {
+        .modebar {
+            background-color: @visualization-box-background-transparent;
+            .modebar-btn {
+                path {
+                    fill: @button-background-color;
+                }
+            }
+        }
+
         .modebar--hover {
             .modebar-group:nth-of-type(2),
             .modebar-group:nth-of-type(4)  {
