--- a/app/partials/directives/plotlyGraph.html
+++ b/app/partials/directives/plotlyGraph.html
@@ -1,6 +1,6 @@
 <div class="header-container" ng-show="!(hideHeader)">
     <span class="header-text pull-left">{{options.table.prettyName}}</span>
-    <options-menu parent-element="el" export-function="" ng-show="!(hideAdvancedOptions)">
+    <options-menu parent-element="element" export-function="" ng-show="!(hideAdvancedOptions)">
         <div class="form-group">
             <label>Database</label>
             <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
