--- a/app/css/popupStyle.less
+++ b/app/css/popupStyle.less
@@ -131,6 +131,16 @@
         }
     }
 
+    .btn-small {
+        width: 50%;
+        margin-top: 10px;
+    }
+
+    .btn-medium {
+        width: 75%;
+        margin-top: 10px;
+    }
+
     .modal-dialog {
         margin: 70px auto;
         width: 700px;
@@ -165,6 +175,18 @@
 
     .glyphicon-chevron-up, .glyphicon-chevron-down {
         cursor: pointer;
+    }
+
+    .glyphicon-question-sign + .tooltip {
+
+        > .tooltip-inner {
+            background-color: @main-text-color;
+        }
+
+        > .tooltip-arrow {
+            border-bottom-color: @main-text-color;
+        }
+
     }
 }
 
