Removed the WebGL scatter plot from the plotly graph visualization due to event bugs in the plotly library.

--- a/app/partials/directives/plotlyGraph.html
+++ b/app/partials/directives/plotlyGraph.html
@@ -28,10 +28,9 @@
         <div class="form-group">
             <label>Type</label>
             <select class="form-control" ng-model="active.type" ng-required="true" ng-change="drawGraph()">
-                <option value="scatter">Scatter</option>
-                <option value="scattergl">Scatter GL</option>
-                <option value="heatmapScatter">Heatmap Scatter</option>
-                <option value="histogramScatter">Histogram Scatter</option>
+                <option value="scatter">Scatter Plot</option>
+                <option value="heatmapScatter">Heatmap Scatter Plot</option>
+                <option value="histogramScatter">Histogram Scatter Plot</option>
             </select>
         </div>
 
