NEON-1894 Add visualization specific options to layout step of wizard

--- a/app/css/popupStyle.less
+++ b/app/css/popupStyle.less
@@ -179,6 +179,7 @@
 
             .modal-body {
                 max-height: 580px;
+                overflow-x: hidden;
                 overflow-y: auto;
             }
         }
