--- a/app/partials/dataset-wizard/fieldsStep.html
+++ b/app/partials/dataset-wizard/fieldsStep.html
@@ -25,45 +25,30 @@
 
         <div class="neon-well toggled-group" ng-show="customTable.showFieldMappings">
             <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Mapping</label>
+                    </div>
+                </div>
+
                 <div class="col-md-4">
                     <div class="form-group">
                         <label>Field</label>
                     </div>
                 </div>
-
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label>Type</label>
-                    </div>
-                </div>
-
-                <div class="col-md-5">
-                    <div class="form-group">
-                        <label>Mapping</label>
-                    </div>
-                </div>
             </div>
 
-            <div class="row" ng-repeat="field in customTable.table.fields">
-                <div class="col-md-4">
+            <div class="row" ng-repeat="(mappingKey, mappingValue) in mappingOptions">
+                <div class="col-md-6">
                     <div class="form-group inner-group truncate">
-                        <span ng-bind="field.columnName" title="{{ field.columnName }}"></span>
-                        </select>
+                        <span ng-bind="mappingValue.prettyName"></span>
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class="form-group inner-group">
-                        <span ng-bind="getFieldType(customDatabase.database.name, customTable.table.name, field.columnName) | uppercase" ng-hide="isLoading"></span>
-                        <span ng-hide="!isLoading">Loading....</span>
-                    </div>
-                </div>
-
-                <div class="col-md-5">
-                    <div class="form-group inner-group">
-                        <select class="form-control" ng-change="selectMapping(tempMappingIndex, field, customTable, customDatabase.database)" ng-model="tempMappingIndex">
+                        <select class="form-control" ng-options="field as (field + ' [' + type.toUpperCase() + ']') for (field, type) in fieldTypes[customDatabase.database.name][customTable.table.name]" ng-model="tempMappingObject" ng-change="selectMapping(tempMappingObject, mappingValue.name, customTable.table)">
                             <option value="">None</option>
-                            <option value="{{$index}}" ng-repeat="mapping in mappingOptions" ng-disabled="isMappingDisabled(customDatabase.database, customTable, mapping)">{{mapping.prettyName}}</option>
                         </select>
                     </div>
                 </div>
