Adding help documentation for the 1.1.5 release.

--- a/app/partials/directives/poweredByNeon.html
+++ b/app/partials/directives/poweredByNeon.html
@@ -1,6 +1,6 @@
 <div class="powered-by-neon">
   <a data-toggle="modal" data-target="#aboutNeonModal" class="navbar-text neon-popup-button pull-right" ng-click="loadNeonInfo()">
-    <span>Powered by</span><span class="icon-Neon_60x34 neon-sprite"></span>
+    <span style="padding-right: 5px;">Powered by</span><span class="icon-Neon_60x34 neon-sprite"></span>
   </a>
 </div>
 
