NEON-1916 Add smaller error icon to sprite sheet for error notifications.

--- a/app/css/neon-dashboard-sprites.css
+++ b/app/css/neon-dashboard-sprites.css
@@ -9,21 +9,27 @@ Icon classes can be used entirely standalone. They are named after their origina
 <img class="icon-home" />
 ```
 */
+.icon-Error_16x16 {
+  background-image: url(../img/neon-dashboard-spritesheet.png);
+  background-position: -336px -52px;
+  width: 16px;
+  height: 16px;
+}
 .icon-Error_64x64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -64px 0px;
+  background-position: -192px -192px;
   width: 64px;
   height: 64px;
 }
 .icon-FilterTray_34x34 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -188px -256px;
+  background-position: -256px -256px;
   width: 34px;
   height: 34px;
 }
 .icon-Help_34x34 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -256px -256px;
+  background-position: -222px -256px;
   width: 34px;
   height: 34px;
 }
@@ -41,7 +47,7 @@ Icon classes can be used entirely standalone. They are named after their origina
 }
 .icon-Options_34x34 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -222px -256px;
+  background-position: -188px -256px;
   width: 34px;
   height: 34px;
 }
@@ -59,37 +65,37 @@ Icon classes can be used entirely standalone. They are named after their origina
 }
 .icon-BarChart64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -128px -128px;
+  background-position: -192px 0px;
   width: 64px;
   height: 64px;
 }
 .icon-Count64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -192px 0px;
+  background-position: -192px -64px;
   width: 64px;
   height: 64px;
 }
 .icon-CreateFilter64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -192px -64px;
+  background-position: -192px -128px;
   width: 64px;
   height: 64px;
 }
 .icon-Gantt64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -192px -128px;
+  background-position: 0px -192px;
   width: 64px;
   height: 64px;
 }
 .icon-Graph64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: 0px -192px;
+  background-position: -64px -192px;
   width: 64px;
   height: 64px;
 }
 .icon-LineChart64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -64px -192px;
+  background-position: -128px -192px;
   width: 64px;
   height: 64px;
 }
@@ -101,43 +107,43 @@ Icon classes can be used entirely standalone. They are named after their origina
 }
 .icon-News64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -192px -192px;
+  background-position: -256px 0px;
   width: 64px;
   height: 64px;
 }
 .icon-OPS64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -256px 0px;
+  background-position: -256px -64px;
   width: 64px;
   height: 64px;
 }
 .icon-OpsClock64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -256px -64px;
+  background-position: -256px -128px;
   width: 64px;
   height: 64px;
 }
 .icon-PieChart64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -256px -128px;
+  background-position: -256px -192px;
   width: 64px;
   height: 64px;
 }
 .icon-ScatterPlot64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -256px -192px;
+  background-position: 0px -256px;
   width: 64px;
   height: 64px;
 }
 .icon-Sunburst64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: 0px -256px;
+  background-position: -64px -256px;
   width: 64px;
   height: 64px;
 }
 .icon-TagCloud64 {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -128px -192px;
+  background-position: -128px -128px;
   width: 64px;
   height: 64px;
 }
@@ -179,7 +185,7 @@ Icon classes can be used entirely standalone. They are named after their origina
 }
 .icon-PieChart {
   background-image: url(../img/neon-dashboard-spritesheet.png);
-  background-position: -64px -256px;
+  background-position: -64px 0px;
   width: 64px;
   height: 64px;
 }
